# internal/user/model/response_model.go
@@ -22,3 +22,11 @@ type LoginUser struct {
 	ID    uuid.UUID `json:"id"`
 	Email string    `json:"email"`
 }
+
+// Refresh Endpoint Response
+type RefreshSuccessEnvelope struct {
+	AccessToken  string `json:"access_token"`
+	RefreshToken string `json:"refresh_token"`
+	TokenType    string `json:"token_type"`
+	ExpiresIn    int64  `json:"expires_in"`
+}
